feat: todo mate id deleted

--- a/views/dev.html
+++ b/views/dev.html
@@ -30,18 +30,18 @@
         <ul class="subtitle">
           <li>Web</li>
           <ul>
-            <li>(Frontend) HTML/CSS/JS, React.js</li>
+            <li>(Frontend) React.js, Next.js</li>
             <li>(Backend) Node.js, Nest.js</li>
           </ul>
           <li>Database</li>
           <ul>
-            <li>MySQL, MongoDB</li>
-            <li>ORM: Sequelize, Prisma</li>
+            <li>MySQL, MongoDB, Firebase</li>
+            <li>ORM: Sequelize, Prisma, Mongoose</li>
           </ul>
           <li>Cloud</li>
           <ul>
             <li>Vercel</li>
-            <li>AWS: EC2, RDS</li>
+            <li>AWS</li>
           </ul>
           <li>Blockchain</li>
           <ul>
