--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*font*/
 @font-face {
   font-family: 'OTEnjoystoriesBA';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff')
