--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body {
 body {
   width: 100%;
   height: 100%;
-  background-image: url('../img/bg1.png');
+  background-image: url('../../img/bg1.png');
   background-size: 100%;
   background-attachment: fixed;
 }
