--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,159 +1,33 @@
-/*font*/
-@font-face {
-  font-family: 'OTEnjoystoriesBA';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff')
-    format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GmarketSansBold';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff')
-    format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GmarketSansMedium';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff')
-    format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 400;
-  src: url('https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2')
-      format('woff2'),
-    url('https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff')
-      format('woff'),
-    url('https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf')
-      format('opentype');
-}
-
-/*For all*/
-html,
+/* Reset default margin and padding for the body */
 body {
-  color: yellow;
-  font-family: 'GmarketSansMedium';
+  margin: 0;
+  padding: 0;
 }
 
-body {
+/* Make the main-container div fill the entire viewport */
+.main-container {
   width: 100%;
-  height: 100%;
-  background-image: url('../../img/bg1.png');
-  background-size: 100%;
-  background-attachment: fixed;
+  height: 100vh; /* Set the height to the full viewport height */
+  background-image: url('../img/ap-logo.png'); /* Replace 'your-image.jpg' with the actual image filename */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.title {
-  font-family: 'GmarketSansBold';
-  font-size: 30px;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.subtitle {
-  margin-top: 10px;
-  font-family: 'GmarketSansBold';
-  font-size: 20px;
-  color: orange;
-}
-
-.info {
-  font-family: 'GmarketSansBold';
-  font-size: 16px;
-  color: yellow;
-  margin-bottom: 50px;
-  line-height: 2.5;
-}
-
-/* button style */
-button {
-  font-family: 'GmarketSansBold';
-  font-size: 20px;
-  color: black;
-  background-color: yellow;
-  border-radius: 30px;
+.go-button{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 150px;
+  height: 30px;
+  background-color: white;
+  border-radius: 15px;
   cursor: pointer;
 }
 
-button:hover {
-  background-color: orange;
-}
-
-hr {
-  border: solid 3px;
-  color: white;
-}
-
-#background-video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-}
-
-/* for mobile */
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-  body {
-    width: 100%;
-    height: 100%;
-  }
-
-  .title {
-    font-family: 'GmarketSansBold';
-    font-size: 26px;
-    color: white;
-    margin-bottom: 20px;
-  }
-
-  .subtitle {
-    margin-top: 10px;
-    font-family: 'GmarketSansBold';
-    font-size: 16px;
-    color: orange;
-  }
-
-  .info {
-    font-family: 'GmarketSansBold';
-    font-size: 12px;
-    color: yellow;
-    margin-bottom: 50px;
-    line-height: 2.5;
-  }
-}
-
-/* for tablet */
-@media only screen and (min-width: 481px) and (max-width: 767px) {
-  .title {
-    font-family: 'GmarketSansBold';
-    font-size: 28px;
-    color: white;
-    margin-bottom: 20px;
-  }
-
-  .subtitle {
-    margin-top: 10px;
-    font-family: 'GmarketSansBold';
-    font-size: 18px;
-    color: orange;
-  }
-
-  .info {
-    font-family: 'GmarketSansBold';
-    font-size: 14px;
-    color: yellow;
-    margin-bottom: 50px;
-    line-height: 2.5;
+@media screen and (max-width: 768px) {
+  .main-container{
+    background-size: contain;
+    background-color: black;
   }
 }
