aboutme && contact file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* Reset default margin and padding for the body */
 body {
   margin: 0;
   padding: 0;
@@ -8,39 +7,21 @@ body {
   height: 100vh; /* Set the height to the full viewport height */
   background-image: url("../img/main-background.png"); /* Replace 'your-image.jpg' with the actual image filename */
   background-position: center;
-  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.image-container img{
+/* index.html */
+.main-image-container img {
   width: 200px;
   height: 300px;
 }
 
-.main-container{
+.main-content-container {
   width: 100%;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 64px;
-}
-
-.main-title {
-  font-size: 64px;
-}
-
-.nav-list{
-  display:flex;
-  justify-content:space-evenly;
-  align-items:center;
-  list-style:none;
-  margin: 0px;
-  padding: 20px;
-}
-
-.nav-list a{
-  text-decoration:none;
-  color:black;
-  font-size: 32px;
 }
 
 .go-button {
@@ -57,14 +38,93 @@ body {
   color: black;
   font-family: cursive;
   font-size: 32px;
+  font-weight: bold;
+}
+
+/* shared */
+.header-title {
+  font-size: 64px;
+  margin: 0 20px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  margin: 0px;
+  padding: 20px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: black;
+  font-size: 32px;
+}
+
+.title {
+  font-size: 36px;
+}
+
+.subtitle {
+  font-size: 24px;
+}
+
+hr {
+  width: 80%;
+  border: 2px solid black;
+}
+
+/* about.html */
+
+.about-content-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px;
+}
+
+.about-info-box {
+  width: 400px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+}
+
+.about-info-box img {
+  width: 200px;
+  height: 220px;
+  border-radius: 50px;
+  margin: 30px;
+}
+
+/* contact.html */
+.contact-content-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px;
+}
+
+.contact-info-box {
+  width: 1000px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
 }
 
 @media (max-width: 768px) {
-  .image-container img{
+  .image-container img {
     width: 80px;
     height: 120px;
   }
-  .main-container{
+  .main-container {
     font-size: 32px;
   }
   .go-button a {
@@ -73,7 +133,16 @@ body {
   .main-title {
     font-size: 32px;
   }
-  .nav-list a{
+  .nav-list a {
     font-size: 16px;
+  }
+  .about-content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .about-info-box {
+    width: 350px;
+    height: 500px;
   }
 }
