--- a/views/about.html
+++ b/views/about.html
@@ -36,6 +36,16 @@
         </ul>
       </div>
       <div class="about-info-box">
+        <div class="title">Job</div>
+        <ul class="subtitle">
+          <li>Goorm Supporters: ImagePacktory Team</li>
+          <ul>
+            <li>Member</li>
+            <li>(2022/08 ~ 2022/12)</li>
+          </ul>
+        </ul>
+      </div>
+      <div class="about-info-box">
         <div class="title">Hobby</div>
         <ul class="subtitle">
           <li>Workout</li>
