--- a/views/activity.html
+++ b/views/activity.html
@@ -3,45 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <title>AP's website</title>
   </head>
   <body>
-    <h1>Name</h1>
-    <p>Park Jihwan</p>
-    <hr>
-    <h1>Birth</h1>
-    <p>2001. 11. 19</p>
-    <hr>
-    <h1>Education</h1>
-    <ul>
-      <li>High School: SHSID (Shanghai High School International Division)</li>
-      <li>University: SKKU (Sungkyunkwan University)</li>
-      <ul>
-        <li>Major 1: System Management Engineering</li>
-        <li>Major 2: Software</li>
+    <header class="header-title">aptheparker</header>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="about.html">About me</a></li>
+        <li><a href="activity.html">Activity</a></li>
+        <li><a href="skill.html">Skill</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </ul>
-    <hr>
-    <h1>Skill</h1>
-    <h2>Language</h2>
-    <ul>
-      <li>Korean</li>
-      <li>English</li>
-      <li>Chinese</li>
-    </ul>
-    <h2>Programming</h2>
-    <ul>
-      <li>HTML/CSS/JS</li>
-      <li>Python</li>
-      <li>C</li>
-      <li>JAVA</li>
-      <li>Solidity</li>
-      <li>SQL</li>
-      <li>Kotlin</li>
-      <li>React.js</li>
-      <li>Node.js</li>
-      <li>Flutter</li>
-    </ul>
-    <hr>
+    </nav>
+    <hr />
+    <main class="activity-content-container">
+      <div class="activity-info-box">
+        <div class="title">Club</div>
+        <ul class="subtitle">
+          <li>CoMit: Programming Club</li>
+          <ul>
+            <li>Leader</li>
+            <li>(2022/03 ~ )</li>
+          </ul>
+          <li>SKKRYPTO: Blockchain Academy</li>
+          <ul>
+            <li>Leader</li>
+            <li>(2022/09 ~ 2023/07)</li>
+          </ul>
+          <li>SME: Student Union of SKKU System Management Engineering</li>
+          <ul>
+            <li>Member</li>
+            <li>(2021/09~2022/06)</li>
+          </ul>
+        </ul>
+      </div>
+      <div class="activity-info-box">
+        <div class="title">Competition</div>
+        <ul class="subtitle">
+          <li>KAMP: AI Manufacturing Data Analysis</li>
+          <ul>
+            <li>Award</li>
+            <li>(2022/10~2022/12)</li>
+          </ul>
+          <li>MEC: Model Entrepreneur Competition (Columbia Business School)</li>
+          <ul>
+            <li>Finalist</li>
+            <li>(2020/02~2020/03)</li>
+          </ul>
+        </ul>
+      </div>
+      <div class="activity-info-box">
+        <div class="title">Dev Project</div>
+        <ul class="subtitle">
+          <li>myweb</li>
+          <ul>
+            <li>Personal website</li>
+            <li>HTML/CSS/JS</li>
+            <li>(2022/07 ~ )</li>
+          </ul>
+          <li>comit</li>
+          <li>hair-heist</li>
+          <li>comity</li>
+          <li>1px</li>
+          <li>diary</li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
