--- a/views/skill.html
+++ b/views/skill.html
@@ -17,31 +17,28 @@
       </ul>
     </nav>
     <hr />
-    <main class="about-content-container">
-      <div class="about-info-box">
-        <img src="../assets/img/pjh.png" alt="" />
-        <div class="title">Name: Park Jihwan</div>
-        <div class="title">Birth: 2001. 11. 19</div>
-        <div class="subtitle">Nickname: ap</div>
-      </div>
-      <div class="about-info-box">
-        <div class="title">Education</div>
-        <ul>
-          <li>High School: SHSID (Shanghai, China)</li>
-          <li>University: SKKU (Suwon, Korea)</li>
-          <ul>
-            <li>Major 1: System Management Engineering</li>
-            <li>Major 2: Software</li>
-          </ul>
+    <main class="skill-content-container">
+      <div class="skill-info-box">
+        <div class="title">Language</div>
+        <ul class="subtitle">
+          <li>Korean</li>
+          <li>English</li>
+          <li>Chinese</li>
         </ul>
       </div>
-      <div class="about-info-box">
-        <div class="title">Hobby</div>
-        <ul>
-          <li>Workout</li>
-          <li>Guitar</li>
-          <li>Programming</li>
-          <li>Reading</li>
+      <div class="skill-info-box">
+        <div class="title">Programming</div>
+        <ul class="subtitle">
+          <li>HTML/CSS/JS</li>
+          <li>Python</li>
+          <li>C</li>
+          <li>JAVA</li>
+          <li>Solidity</li>
+          <li>SQL</li>
+          <li>Kotlin</li>
+          <li>React.js</li>
+          <li>Node.js</li>
+          <li>Flutter</li>
         </ul>
       </div>
     </main>
