--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
+@font-face {
+  font-family: 'eagleLake-regular';
+  src: url("../fonts/EagleLake-Regular.ttf");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: cursive;
+  font-family: eagleLake-regular;
   font-weight: bold;
   width: 100%;
   height: 100vh; /* Set the height to the full viewport height */
@@ -63,11 +68,11 @@ body {
 }
 
 .title {
-  font-size: 36px;
+  font-size: 24px;
 }
 
 .subtitle {
-  font-size: 24px;
+  font-size: 20px;
 }
 
 hr {
@@ -76,7 +81,6 @@ hr {
 }
 
 /* about.html */
-
 .about-content-container {
   display: flex;
   justify-content: space-evenly;
@@ -85,7 +89,7 @@ hr {
 }
 
 .about-info-box {
-  width: 400px;
+  width: 300px;
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -99,6 +103,42 @@ hr {
   height: 220px;
   border-radius: 50px;
   margin: 30px;
+}
+
+/* activity.html */
+.activity-content-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px;
+}
+
+.activity-info-box {
+  width: 400px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+}
+
+/* skill.html */
+.skill-content-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px;
+}
+
+.skill-info-box {
+  width: 600px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
 }
 
 /* contact.html */
@@ -133,6 +173,9 @@ hr {
   .main-title {
     font-size: 32px;
   }
+  .header-title{
+    font-size: 32px;
+  }
   .nav-list a {
     font-size: 16px;
   }
@@ -142,6 +185,26 @@ hr {
     gap: 20px;
   }
   .about-info-box {
+    width: 350px;
+    height: 500px;
+  }
+
+  .activity-content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .activity-info-box {
+    width: 350px;
+    height: 500px;
+  }
+
+  .skill-content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .skill-info-box {
     width: 350px;
     height: 500px;
   }
