--- a/views/activity.html
+++ b/views/activity.html
@@ -56,17 +56,12 @@
       <div class="activity-info-box">
         <div class="title">Dev Project</div>
         <ul class="subtitle">
-          <li>myweb</li>
-          <ul>
-            <li>Personal website</li>
-            <li>HTML/CSS/JS</li>
-            <li>(2022/07 ~ )</li>
-          </ul>
-          <li>comit</li>
-          <li>hair-heist</li>
-          <li>comity</li>
-          <li>1px</li>
-          <li>diary</li>
+          <li>myweb: Personal Website (HTML/CSS/JS)</li>
+          <li>comit: CoMit Website (HTML/CSS/JS)</li>
+          <li>hair-heist: Hair Portfolio App (Flutter)</li>
+          <li>comity: CoMit Sutdy Group Website (React/Node)</li>
+          <li>1px: CoMitXMoD Project (React/Node)</li>
+          <li>diary: Sticker Diary (React)</li>
         </ul>
       </div>
     </main>
