html titles changed

--- a/views/activity.html
+++ b/views/activity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <title>AP's website</title>
+    <title>AP's website - Acivity</title>
   </head>
   <body>
     <header class="header-title">aptheparker</header>
@@ -59,9 +59,9 @@
           <li>myweb: Personal Website (HTML/CSS/JS)</li>
           <li>comit: CoMit Website (HTML/CSS/JS)</li>
           <li>hair-heist: Hair Portfolio App (Flutter)</li>
-          <li>comity: CoMit Sutdy Group Website (React/Node)</li>
-          <li>1px: CoMitXMoD Project (React/Node)</li>
-          <li>diary: Sticker Diary (React)</li>
+          <li>comity: CoMit Sutdy Group Website (React.js/Node.js)</li>
+          <li>1px: CoMitXMoD Project (React.js/Node.js)</li>
+          <li>diary: Sticker Diary (React.js)</li>
         </ul>
       </div>
     </main>
