--- a/views/contact.html
+++ b/views/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <title>AP's website</title>
+    <title>AP's website - Contact</title>
   </head>
   <body>
     <header class="header-title">aptheparker</header>
