--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,12 @@ hr {
   .nav-list a {
     font-size: 16px;
   }
+  .title {
+    font-size: 20px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
   .about-content-container {
     display: flex;
     flex-direction: column;
