skill programming changed

--- a/views/skill.html
+++ b/views/skill.html
@@ -29,16 +29,27 @@
       <div class="skill-info-box">
         <div class="title">Programming</div>
         <ul class="subtitle">
-          <li>HTML/CSS/JS</li>
-          <li>Python</li>
-          <li>C</li>
-          <li>JAVA</li>
-          <li>Solidity</li>
-          <li>SQL</li>
-          <li>Kotlin</li>
-          <li>React.js</li>
-          <li>Node.js</li>
-          <li>Flutter</li>
+          <li>Web</li>
+          <ul>
+            <li>(Frontend) HTML/CSS/JS, React.js</li>
+            <li>(Backend) Node.js, Flask</li>
+          </ul>
+          <li>App</li>
+          <ul>
+            <li>Flutter, Kotlin</li>
+          </ul>
+          <li>Database</li>
+          <ul>
+            <li>SQL, MongoDB</li>
+          </ul>
+          <li>Blockchain</li>
+          <ul>
+            <li>Solidity, Web3.js</li>
+          </ul>
+          <li>Algorithm</li>
+          <ul>
+            <li>Python, Java, C</li>
+          </ul>
         </ul>
       </div>
     </main>
