--- a/views/about.html
+++ b/views/about.html
@@ -23,6 +23,7 @@
         <div class="title">Name: Park Jihwan</div>
         <div class="title">Birth: 2001. 11. 19</div>
         <div class="subtitle">Nickname: ap</div>
+        <a href="https://aptheparker.notion.site/0f7be966afbb46baabdd7469ee7f4bd2?pvs=4">Blog</a>
       </div>
       <div class="about-info-box">
         <div class="title">Education</div>
