blog name changed && a deco changed

--- a/views/activity.html
+++ b/views/activity.html
@@ -56,9 +56,9 @@
       <div class="activity-info-box">
         <div class="title">Dev Project</div>
         <ul class="subtitle">
-          <li>myweb: Personal Website (HTML/CSS/JS)</li>
-          <li>comit: CoMit Website (HTML/CSS/JS)</li>
-          <li>hair-heist: Hair Portfolio App (Flutter)</li>
+          <li><a href="https://aptheparker.github.io/myweb">myweb: Personal Website</a></li>
+          <li><a href="https://comit.skku.io">comit: CoMit Website</a></li>
+          <li>hair-heist: Hair Portfolio App</li>
           <li>comity: CoMit Sutdy Group Website (React.js/Node.js)</li>
           <li>1px: CoMitXMoD Project (React.js/Node.js)</li>
           <li>diary: Sticker Diary (React.js)</li>
