--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,11 @@ body {
   font-size: 20px;
 }
 
+a{
+  color: black;
+  font-size: 20px;
+}
+
 hr {
   width: 80%;
   border: 2px solid black;
@@ -129,12 +134,6 @@ hr {
   height: 220px;
   border-radius: 50px;
   margin: 30px;
-}
-
-.about-info-box a {
-  color: black;
-  font-size: 24px;
-  font-style: italic;
 }
 
 /* activity.html */
