firebase skill addec

--- a/views/skill.html
+++ b/views/skill.html
@@ -40,7 +40,7 @@
           </ul>
           <li>Database</li>
           <ul>
-            <li>SQL, MongoDB</li>
+            <li>SQL, MongoDB, Firebase</li>
           </ul>
           <li>Blockchain</li>
           <ul>
