--- a/views/about.html
+++ b/views/about.html
@@ -10,9 +10,9 @@
     <header class="header-title">aptheparker</header>
     <nav>
       <ul class="nav-list">
-        <li><a href="about.html">About me</a></li>
-        <li><a href="activity.html">Activity</a></li>
-        <li><a href="skill.html">Skill</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="dev.html">Dev</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -23,10 +23,6 @@
         <div class="title">Name: Park Jihwan</div>
         <div class="title">Birth: 2001. 11. 19</div>
         <div class="subtitle">Nickname: ap</div>
-        <a
-          href="https://aptheparker.notion.site/0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
-          >My Blog</a
-        >
       </div>
       <div class="about-info-box">
         <div class="title">Education</div>
@@ -40,23 +36,23 @@
         </ul>
       </div>
       <div class="about-info-box">
-        <div class="title">Job</div>
+        <div class="title">Skill</div>
         <ul class="subtitle">
-          <li>Goorm Supporters: ImagePacktory Team</li>
+          <li>Language</li>
           <ul>
-            <li>Member</li>
-            <li>(2022/08 ~ 2022/12)</li>
+            <li>Korean</li>
+            <li>English</li>
+            <li>Chinese</li>
           </ul>
+          <li>Programming</li>
         </ul>
       </div>
       <div class="about-info-box">
-        <div class="title">Hobby</div>
-        <ul class="subtitle">
-          <li>Workout</li>
-          <li>Guitar</li>
-          <li>Programming</li>
-          <li>Reading</li>
-        </ul>
+        <a
+          href="https://aptheparker.notion.site/0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
+          class="title"
+          >My Blog</a
+        >
       </div>
     </main>
   </body>
