--- a/views/contact.html
+++ b/views/contact.html
@@ -10,9 +10,9 @@
     <header class="header-title">aptheparker</header>
     <nav>
       <ul class="nav-list">
-        <li><a href="about.html">About me</a></li>
-        <li><a href="activity.html">Activity</a></li>
-        <li><a href="skill.html">Skill</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="dev.html">Dev</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
