--- a/views/dev.html
+++ b/views/dev.html
@@ -4,56 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <title>AP's website - Acivity</title>
+    <title>AP's website - Skill</title>
   </head>
   <body>
     <header class="header-title">aptheparker</header>
     <nav>
       <ul class="nav-list">
-        <li><a href="about.html">About me</a></li>
-        <li><a href="activity.html">Activity</a></li>
-        <li><a href="skill.html">Skill</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="dev.html">Dev</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <hr />
-    <main class="activity-content-container">
-      <div class="activity-info-box">
-        <div class="title">Club</div>
+    <main class="dev-content-container">
+      <div class="dev-info-box">
+        <div class="title">Programming</div>
         <ul class="subtitle">
-          <li>CoMit: Programming Club</li>
+          <li>Web</li>
           <ul>
-            <li>Leader</li>
-            <li>(2022/03 ~ )</li>
+            <li>(Frontend) HTML/CSS/JS, React.js</li>
+            <li>(Backend) Node.js, Flask</li>
           </ul>
-          <li>SKKRYPTO: Blockchain Academy</li>
+          <li>App</li>
           <ul>
-            <li>Leader</li>
-            <li>(2022/09 ~ 2023/07)</li>
+            <li>Flutter, Kotlin</li>
           </ul>
-          <li>SME: Student Union of SKKU System Management Engineering</li>
+          <li>Database</li>
           <ul>
-            <li>Member</li>
-            <li>(2021/09~2022/06)</li>
+            <li>SQL, MongoDB, Firebase</li>
+          </ul>
+          <li>Blockchain</li>
+          <ul>
+            <li>Solidity, Web3.js</li>
+          </ul>
+          <li>Algorithm</li>
+          <ul>
+            <li>Python, Java, C</li>
           </ul>
         </ul>
       </div>
-      <div class="activity-info-box">
-        <div class="title">Competition</div>
-        <ul class="subtitle">
-          <li>KAMP: AI Manufacturing Data Analysis</li>
-          <ul>
-            <li>Award</li>
-            <li>(2022/10~2022/12)</li>
-          </ul>
-          <li>MEC: Model Entrepreneur Competition (Columbia Business School)</li>
-          <ul>
-            <li>Finalist</li>
-            <li>(2020/02~2020/03)</li>
-          </ul>
-        </ul>
-      </div>
-      <div class="activity-info-box">
+      <div class="dev-info-box">
         <div class="title">Dev Project</div>
         <ul class="subtitle">
           <li><a href="https://aptheparker.github.io/myweb">myweb: Personal Website</a></li>
