--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,14 @@
     <title>AP's website</title>
   </head>
   <body>
-    <header class="header-title">aptheparker</header>
+    <header class="header-title">
+      aptheparker
+      <a
+        href="https://aptheparker.notion.site/aptheparker-0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
+        class="title"
+        >My Blog</a
+      >
+    </header>
     <nav>
       <ul class="nav-list">
         <li><a href="about.html">About Me</a></li>
@@ -46,13 +53,6 @@
           </ul>
           <li>Programming</li>
         </ul>
-      </div>
-      <div class="about-info-box">
-        <a
-          href="https://aptheparker.notion.site/aptheparker-0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
-          class="title"
-          >My Blog</a
-        >
       </div>
     </main>
   </body>
