my blog added to other pages

--- a/views/dev.html
+++ b/views/dev.html
@@ -7,8 +7,14 @@
     <title>AP's website - Skill</title>
   </head>
   <body>
-    <header class="header-title">aptheparker</header>
-    <nav>
+    <header class="header-title">
+      aptheparker
+      <a
+        href="https://aptheparker.notion.site/aptheparker-0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
+        class="title"
+        >My Blog</a
+      >
+    </header>    <nav>
       <ul class="nav-list">
         <li><a href="about.html">About Me</a></li>
         <li><a href="experience.html">Experience</a></li>
