--- a/views/experience.html
+++ b/views/experience.html
@@ -7,7 +7,14 @@
     <title>AP's website - Acivity</title>
   </head>
   <body>
-    <header class="header-title">aptheparker</header>
+    <header class="header-title">
+      aptheparker
+      <a
+        href="https://aptheparker.notion.site/aptheparker-0f7be966afbb46baabdd7469ee7f4bd2?pvs=4"
+        class="title"
+        >My Blog</a
+      >
+    </header>
     <nav>
       <ul class="nav-list">
         <li><a href="about.html">About Me</a></li>
@@ -56,7 +63,9 @@
             <li>Award</li>
             <li>(2022/10~2022/12)</li>
           </ul>
-          <li>MEC: Model Entrepreneur Competition (Columbia Business School)</li>
+          <li>
+            MEC: Model Entrepreneur Competition (Columbia Business School)
+          </li>
           <ul>
             <li>Finalist</li>
             <li>(2020/02~2020/03)</li>
