--- a/views/dev.html
+++ b/views/dev.html
@@ -56,9 +56,9 @@
           <li><a href="https://aptheparker.github.io/myweb">myweb: Personal Website</a></li>
           <li><a href="https://comit.skku.io">comit: CoMit Website</a></li>
           <li>hair-heist: Hair Portfolio App</li>
-          <li><a href="https://comity.vercel.app"></a>comity: CoMit Sutdy Group Website (React.js/Node.js)</li>
-          <li><a href="https://1px.vercel.app"></a>1px: CoMitXMoD Project (React.js/Node.js)</li>
-          <li><a href="https://1px-diary.vercel.app"></a>diary: Sticker Diary (React.js)</li>
+          <li><a href="https://comity.vercel.app">comity: CoMit Sutdy Group Website (React.js/Node.js)</a></li>
+          <li><a href="https://1px.vercel.app">1px: CoMitXMoD Project (React.js/Node.js)</a></li>
+          <li><a href="https://1px-diary.vercel.app">diary: Sticker Diary (React.js)</a></li>
         </ul>
       </div>
     </main>
