dev tools & job added

--- a/views/dev.html
+++ b/views/dev.html
@@ -30,7 +30,7 @@
           <li>Web</li>
           <ul>
             <li>(Frontend) HTML/CSS/JS, React.js</li>
-            <li>(Backend) Node.js, Flask</li>
+            <li>(Backend) Node.js, Nest,js, Flask</li>
           </ul>
           <li>App</li>
           <ul>
@@ -38,13 +38,12 @@
           </ul>
           <li>Database</li>
           <ul>
-            <li>SQL, MongoDB, Firebase</li>
-          </ul>
+            <li>SQL, NoSQL, Prisma</li>
           <li>Blockchain</li>
           <ul>
-            <li>Solidity, Web3.js</li>
+            <li>Solidity</li>
           </ul>
-          <li>Algorithm</li>
+          <li>Other</li>
           <ul>
             <li>Python, Java, C</li>
           </ul>
