--- a/views/experience.html
+++ b/views/experience.html
@@ -28,10 +28,15 @@
       <div class="experience-info-box">
         <div class="title">Job</div>
         <ul class="subtitle">
-          <li>Goorm Supporters: ImagePacktory Team</li>
+          <li>Goorm Supporters</li>
           <ul>
             <li>Member</li>
             <li>(2022/08 ~ 2022/12)</li>
+          </ul>
+          <li>SmartDoctor</li>
+          <ul>
+            <li>Backend Developer (Nest.js & Prisma)</li>
+            <li>(2023/09 ~ )</li>
           </ul>
         </ul>
       </div>
@@ -41,7 +46,7 @@
           <li>CoMit: Programming Club</li>
           <ul>
             <li>Leader</li>
-            <li>(2022/03 ~ )</li>
+            <li>(2022/09 ~ 2023/08)</li>
           </ul>
           <li>SKKRYPTO: Blockchain Academy</li>
           <ul>
