content: experience info updated

--- a/views/experience.html
+++ b/views/experience.html
@@ -33,9 +33,10 @@
             <li>Member</li>
             <li>(2022/08 ~ 2022/12)</li>
           </ul>
+          <br>
           <li>SmartDoctor</li>
           <ul>
-            <li>Backend Developer (Nest.js & Prisma)</li>
+            <li>Backend Developer</li>
             <li>(2023/09 ~ )</li>
           </ul>
         </ul>
@@ -45,18 +46,19 @@
         <ul class="subtitle">
           <li>CoMit: Programming Club</li>
           <ul>
-            <li>Leader</li>
-            <li>(2022/09 ~ 2023/08)</li>
+            <li>Leader: 2022/09 ~ 2023/08</li>
+            <li>Member: 2022/05 ~ 2022/08</li>
           </ul>
+          <br>
           <li>SKKRYPTO: Blockchain Academy</li>
           <ul>
-            <li>Leader</li>
-            <li>(2022/09 ~ 2023/07)</li>
+            <li>Leader: 2023/01 ~ 2023/07</li>
+            <li>Member: 2022/09 ~ 2022/12</li>
           </ul>
+           <br>
           <li>SME: Student Union of SKKU System Management Engineering</li>
           <ul>
-            <li>Member</li>
-            <li>(2021/09~2022/06)</li>
+            <li>Member: 2021/09~2022/06</li>
           </ul>
         </ul>
       </div>
@@ -68,6 +70,7 @@
             <li>Award</li>
             <li>(2022/10~2022/12)</li>
           </ul>
+          <br>
           <li>
             MEC: Model Entrepreneur Competition (Columbia Business School)
           </li>
