content: dev info updated

--- a/views/dev.html
+++ b/views/dev.html
@@ -14,7 +14,8 @@
         class="title"
         >My Blog</a
       >
-    </header>    <nav>
+    </header>
+    <nav>
       <ul class="nav-list">
         <li><a href="about.html">About Me</a></li>
         <li><a href="experience.html">Experience</a></li>
@@ -30,33 +31,40 @@
           <li>Web</li>
           <ul>
             <li>(Frontend) HTML/CSS/JS, React.js</li>
-            <li>(Backend) Node.js, Nest,js, Flask</li>
-          </ul>
-          <li>App</li>
-          <ul>
-            <li>Flutter, Kotlin</li>
+            <li>(Backend) Node.js, Nest.js</li>
           </ul>
           <li>Database</li>
           <ul>
-            <li>SQL, NoSQL, Prisma</li>
+            <li>MySQL, MongoDB</li>
+            <li>ORM: Sequelize, Prisma</li>
+          </ul>
+          <li>Cloud</li>
+          <ul>
+            <li>Vercel</li>
+            <li>AWS: EC2, RDS</li>
+          </ul>
           <li>Blockchain</li>
           <ul>
             <li>Solidity</li>
-          </ul>
-          <li>Other</li>
-          <ul>
-            <li>Python, Java, C</li>
           </ul>
         </ul>
       </div>
       <div class="dev-info-box">
         <div class="title">Dev Project</div>
         <ul class="subtitle">
-          <li><a href="https://aptheparker.github.io/myweb">myweb: Personal Website</a></li>
+          <li>
+            <a href="https://aptheparker.github.io/myweb"
+              >myweb: Personal Website</a
+            >
+          </li>
           <li><a href="https://comit.skku.io">comit: CoMit Website</a></li>
           <li>hair-heist: Hair Portfolio App</li>
-          <li><a href="https://1px.vercel.app">1px: CoMitXMoD Project (React.js/Node.js)</a></li>
-          <li><a href="https://1px-diary.vercel.app">diary: Sticker Diary (React.js)</a></li>
+          <li>
+            <a href="https://1px.vercel.app">1px: CoMitXMoD Project</a>
+          </li>
+          <li>
+            <a href="https://1px-diary.vercel.app">diary: Sticker Diary</a>
+          </li>
         </ul>
       </div>
     </main>
