fix: certificate info added

--- a/views/dev.html
+++ b/views/dev.html
@@ -26,7 +26,7 @@
     <hr />
     <main class="dev-content-container">
       <div class="dev-info-box">
-        <div class="title">Programming</div>
+        <div class="title">Programming Language</div>
         <ul class="subtitle">
           <li>Web</li>
           <ul>
@@ -35,10 +35,10 @@
           </ul>
           <li>Database</li>
           <ul>
-            <li>MySQL, MongoDB, Firebase</li>
+            <li>MySQL, MongoDB, Redis, Firebase</li>
             <li>ORM: Sequelize, Prisma, Mongoose</li>
           </ul>
-          <li>Cloud</li>
+          <li>Cloud & Deployment</li>
           <ul>
             <li>Vercel</li>
             <li>AWS</li>
@@ -50,21 +50,9 @@
         </ul>
       </div>
       <div class="dev-info-box">
-        <div class="title">Dev Project</div>
+        <div class="title">Certificate</div>
         <ul class="subtitle">
-          <li>
-            <a href="https://aptheparker.github.io/myweb"
-              >myweb: Personal Website</a
-            >
-          </li>
-          <li><a href="https://comit.skku.io">comit: CoMit Website</a></li>
-          <li>hair-heist: Hair Portfolio App</li>
-          <li>
-            <a href="https://1px.vercel.app">1px: CoMitXMoD Project</a>
-          </li>
-          <li>
-            <a href="https://1px-diary.vercel.app">diary: Sticker Diary</a>
-          </li>
+          <li>AWS Certified Cloud Practitioner</li>
         </ul>
       </div>
     </main>
